--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -83,9 +83,14 @@
                         You only need to upload your best photo and you can be the lucky winner.
                     </p>
                     <p>
-                        You do not have to be the best. Only better than the others.
-                        Compete your skills with other photgraphers.
+                        In our current photo competition, we are looking for recordings that are colorful, lively and
+                        diverse.
                     </p>
+                    <p>
+                        You do not have to be the best. Only better than the others.
+                        Compete your skills with other photgraphers and convince the Jury with your best pictures.
+                    </p>
+
 
                 </article>
             </div>
@@ -289,8 +294,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -299,8 +308,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -309,8 +322,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -319,8 +336,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -329,8 +350,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -339,8 +364,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -349,8 +378,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
 
@@ -360,8 +393,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -370,8 +407,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -380,8 +421,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
 
                 </div>
@@ -391,9 +436,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -402,8 +450,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
