--- a/HTML/index.html
+++ b/HTML/index.html
@@ -293,8 +293,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -303,8 +307,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -313,8 +321,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -323,8 +335,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -333,8 +349,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -343,8 +363,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -353,8 +377,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
 
@@ -364,8 +392,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -374,8 +406,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -384,8 +420,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
 
                 </div>
@@ -395,9 +435,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -406,8 +449,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
