--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -319,8 +319,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -329,8 +333,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -339,8 +347,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -349,8 +361,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -359,8 +375,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -369,8 +389,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -379,8 +403,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
 
@@ -390,8 +418,12 @@
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -400,8 +432,12 @@
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -410,8 +446,12 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
 
                 </div>
@@ -422,8 +462,12 @@
                 </a>
                 <div class="likeAndCommentBox">
 
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
