--- a/HTML/index.html
+++ b/HTML/index.html
@@ -59,7 +59,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
-        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
+        <p id="littleHeading">The best on Feet on the Web!</p>
     </div>
 </header>
 
