--- a/HTML/login.html
+++ b/HTML/login.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
+
 
 
     <title>snkrGllry - Login</title>
@@ -57,7 +57,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
-        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
+        <p id="littleHeading">The best on Feet on the Web!</p>
     </div>
 </header>
 
@@ -122,7 +122,7 @@
 
 
 
-    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+    <div class="navbar navbar-default nav-links navbar-static-bottom">
         <div id="footer-bottom" class="container">
             <ul class="nav navbar-nav footer-nav">
                 <li><a href="contact.html">Contact</a></li>
