--- a/HTML/upload.html
+++ b/HTML/upload.html
@@ -47,6 +47,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
+        <p id="littleHeading">The best on Feet on the Web!</p>
     </div>
 </header>
 
