--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -21,7 +21,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
+
 
 
 </head>
@@ -54,6 +54,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
+        <p id="littleHeading">The best on Feet on the Web!</p>
     </div>
 </header>
 
