--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -18,7 +18,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
+
 
 
     <title>snkrGllry - Contact</title>
@@ -54,6 +54,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
+        <p id="littleHeading">The best on Feet on the Web!</p>
     </div>
 </header>
 
