--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -52,7 +52,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
-        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
+        <p id="littleHeading">The best on Feet on the Web!</p>
     </div>
 </header>
 
@@ -412,19 +412,6 @@
 </section>
 
 
-<section>
-    <div class="container">
-        <div class="row-centered">
-            <ul class="pagination">
-                <li><a href="index.html">1</a></li>
-                <li><a href="index.html">2</a></li>
-                <li><a href="index.html">3</a></li>
-                <li><a href="index.html">4</a></li>
-                <li><a href="index.html">5</a></li>
-            </ul>
-        </div>
-    </div>
-</section>
 
 
 <footer class="footer-bottom">
