--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -54,7 +54,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
-        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
+        <p id="littleHeading">The best on Feet on the Web!</p>
     </div>
 </header>
 
@@ -319,8 +319,13 @@
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
+
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-comment"></span>
+                    </a>
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -432,22 +437,7 @@
     </div>
 </section>
 
-<section>
 
-    <div class="container">
-
-        <div class="row-centered">
-
-            <ul class="pagination">
-                <li><a href="index.html">1</a></li>
-                <li><a href="index.html">2</a></li>
-                <li><a href="index.html">3</a></li>
-                <li><a href="index.html">4</a></li>
-                <li><a href="index.html">5</a></li>
-            </ul>
-        </div>
-    </div>
-</section>
 
 
 <footer class="footer-bottom">
