--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
 
 
-
 </head>
 
 <body>
@@ -64,14 +63,15 @@
         <div class="row">
 
 
-
             <div class="row-centered col-xs-12 col-sm-6">
 
                 <figure>
                     <img class="img-responsive center-block " src="../img/IMG_5109.jpg" height="750" width="500">
                 </figure>
                 <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <a href="viewPicByClick.html">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </a>
 
                     <p>123 Likes</p>
                 </div>
@@ -117,16 +117,15 @@
 <footer class="footer-bottom">
 
 
-    <div  id="test" class="navbar navbar-default nav-links ">
+    <div id="test" class="navbar navbar-default nav-links ">
         <div class="container">
-            <ul  class="nav navbar-nav footer-nav">
+            <ul class="nav navbar-nav footer-nav">
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="impressum.html">Impressum</a></li>
 
             </ul>
         </div>
     </div>
-
 
 
 </footer>
